--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "USERGE-X",
+    "name": "USERGE-X test",
     "description": "telegram pluggable userbot",
     "logo": "https://i.imgur.com/PlXD0aL.png",
     "keywords": [
