--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "USERGE-X For Westhofer ",
     "description": "telegram pluggable userbot for personal use",
-    "logo": "https://i.imgur.com/PlXD0aL.png",
+    "logo": "https://imgur.com/WDCD4NX.png",
     "keywords": [
         "USERGE-X",
         "telegram",
